--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,7 @@ jobs:
     - stage: install
       script: |
         export ITK_DIR=$HOME/itkbuild/itkbuild
+        ls ITK_DIR
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
@@ -43,6 +44,7 @@ jobs:
     - stage: install
       script: |
         export ITK_DIR=$HOME/itkbuild/itkbuild
+        ls ITK_DIR
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
