--- a/.travis.yml
+++ b/.travis.yml
@@ -36,16 +36,17 @@ jobs:
   include:
     - stage: install
       script: |
-        export ITK_DIR=$HOME/itkbuild
+        export ITK_DIR=/home/travis/itkbuild
         ls ITK_DIR
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
       os: linux
       python: 3.6
+      sudo: required
     - stage: install
       script: |
-        export ITK_DIR=$HOME/itkbuild
+        export ITK_DIR=/home/travis/itkbuild
         ls ITK_DIR
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
