--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ cache:
         - $HOME/.ccache
         - $HOME/itkbuild
         - $HOME/itkbuild/itkbuild
-        - $HOM/itkbuild/itksource
-
+        - $HOME/itkbuild/itksource
 
 
 before_install: |
@@ -34,9 +33,27 @@ before_install: |
 
 jobs:
   include:
+
+    - stage: makeITK
+      script:
+        - ./configure_ITK_External.sh;
+      os: linux
+      python: 3.6
+    - stage: makeITK
+      script: |
+        brew update;
+        brew install ccache;
+        unset CCACHE_DISABLE;
+        export CCACHE_DIR=$HOME/.ccache;
+        - ccache --show-stats;
+        - ./configure_ITK_External.sh;
+      os: osx
+      sudo: required
+      language: generic
+
     - stage: install
       script: |
-        export ITK_DIR=/home/travis/itkbuild
+        export ITK_DIR=$HOME/itkbuild/itkbuild
         ls ITK_DIR
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
@@ -46,7 +63,7 @@ jobs:
       sudo: required
     - stage: install
       script: |
-        export ITK_DIR=/home/travis/itkbuild
+        export ITK_DIR=$HOME/itkbuild/itkbuild
         ls ITK_DIR
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
@@ -66,6 +83,7 @@ jobs:
         - ./tests/run_test.sh
       os: linux
       python: 3.6
+
 
   allow_failures:
     - os: osx
