--- a/.travis.yml
+++ b/.travis.yml
@@ -35,18 +35,17 @@ jobs:
   include:
 
     - stage: makeITK
-      script:
-        - ./configure_ITK_External.sh;
+      script: |
+        travis_retry pip install --upgrade pip setuptools wheel
+        travis_retry pip install -r requirements.txt --only-binary=scipy
+        python setup.py install
       os: linux
       python: 3.6
     - stage: makeITK
       script: |
-        brew update;
-        brew install ccache;
-        unset CCACHE_DISABLE;
-        export CCACHE_DIR=$HOME/.ccache;
-        ccache --show-stats;
-        ./configure_ITK_External.sh;
+        travis_retry pip install --upgrade pip setuptools wheel
+        travis_retry pip install -r requirements.txt --only-binary=scipy
+        python setup.py install
       os: osx
       sudo: required
       language: generic
