--- a/.travis.yml
+++ b/.travis.yml
@@ -34,10 +34,28 @@ before_install: |
 jobs:
   include:
 
+    - stage: makeITK
+      script: |
+        unset CCACHE_DISABLE
+        export CCACHE_DIR=$HOME/.ccache
+        ./configure_ITK_External.sh;
+      os: linux
+      python: 3.6
+    - stage: makeITK
+      script: |
+        brew update;
+        brew install ccache;
+        unset CCACHE_DISABLE;
+        export CCACHE_DIR=$HOME/.ccache;
+        ccache --show-stats;
+        export PATH="/usr/local/opt/ccache/libexec:$PATH";
+        ./configure_ITK_External.sh;
+      os: osx
+      sudo: required
+      language: generic
+
     - stage: install
       script: |
-        export ITK_DIR=$HOME/itkbuild/itkbuild
-        ls $ITK_DIR
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
@@ -46,8 +64,6 @@ jobs:
       sudo: required
     - stage: install
       script: |
-        export ITK_DIR=$HOME/itkbuild/itkbuild
-        ls $ITK_DIR
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
