--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,7 @@ jobs:
   include:
     - stage: install
       script: |
+        export ITK_DIR=$HOME/itkbuild/itbuild/
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
