--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 language: python
 
-
 cache:
     - ccache
     - directories:
         - $HOME/.ccache
-        - $HOME/itkbuild
-        - $HOME/itkbuild/itkbuild
-        - $HOME/itkbuild/itksource
+        - $HOME/itkbuild/
+        - $HOME/itkbuild/itkbuild/
+        - $HOME/itkbuild/itksource/
 
 
 before_install: |
@@ -25,37 +24,33 @@ before_install: |
       source venv/bin/activate;
   fi
 
-# Manually install python on osx
-#install: |
-#  travis_retry pip install --upgrade pip setuptools wheel
-#  travis_retry pip install -r requirements.txt --only-binary=scipy
-#  python setup.py install
-
-#    - stage: makeITK
-#      script: |
-#        unset CCACHE_DISABLE
-#        export CCACHE_DIR=$HOME/.ccache
-#        ./configure_ITK_External.sh;
-#      os: linux
-#      python: 3.6
-#    - stage: makeITK
-#      script: |
-#        brew update;
-#        brew install ccache;
-#        unset CCACHE_DISABLE;
-#        export CCACHE_DIR=$HOME/.ccache;
-#        ccache --show-stats;
-#        export PATH="/usr/local/opt/ccache/libexec:$PATH";
-#        ./configure_ITK_External.sh;
-#      os: osx
-#      sudo: required
-#      language: generic
 
 jobs:
   include:
+
+    - stage: makeITK
+      script: |
+        unset CCACHE_DISABLE
+        export CCACHE_DIR=$HOME/.ccache
+        ./configure_ITK_External.sh;
+      os: linux
+      python: 3.6
+    - stage: makeITK
+      script: |
+        brew update;
+        brew install ccache;
+        unset CCACHE_DISABLE;
+        export CCACHE_DIR=$HOME/.ccache;
+        ccache --show-stats;
+        export PATH="/usr/local/opt/ccache/libexec:$PATH";
+        ./configure_ITK_External.sh;
+      os: osx
+      sudo: required
+      language: generic
+
     - stage: install
       script: |
-        export ITK_DIR=$HOME/itkbuild/itbuild/
+        export ITK_DIR=$HOME/itkbuild/itkbuild/
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
@@ -64,7 +59,7 @@ jobs:
       sudo: required
     - stage: install
       script: |
-        export ITK_DIR=$HOME/itkbuild/itbuild/
+        export ITK_DIR=$HOME/itkbuild/itkbuild/
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
@@ -83,14 +78,10 @@ jobs:
         - ./tests/run_test.sh
       os: linux
       python: 3.6
-
 
   allow_failures:
     - os: osx
 
-
-#script:
-#   - ./tests/run_tests.sh
 
 branches:
   only:
