--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: python
 
 cache:
     - directories:
-        - /home/travis/itkbuild-linux
-        - /users/travis/itkbuild-mac
+        - $TRAVIS_BUILD_DIR/itkbuild-linux
+        - $TRAVIS_BUILD_DIR/itkbuild-mac
 
 before_install: |
   if [[ $TRAVIS_OS_NAME == 'osx' ]]; 
@@ -46,7 +46,7 @@ jobs:
 
     - stage: install
       script: |
-        export ITK_DIR=/home/travis/itkbuild-linux
+        export ITK_DIR=$TRAVIS_BUILD_DIR/itkbuild-linux
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
@@ -55,7 +55,7 @@ jobs:
       sudo: required
     - stage: install
       script: |
-        export ITK_DIR=/users/travis/itkbuild-mac
+        export ITK_DIR=$TRAVIS_BUILD_DIR/itkbuild-mac
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
