--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 
 cache:
-    pip
+    - pip
     - directories:
         - $TRAVIS_BUILD_DIR/itkbuild-linux
         - $HOME/itkbuild-mac
