--- a/.travis.yml
+++ b/.travis.yml
@@ -23,29 +23,31 @@ before_install: |
       source venv/bin/activate;
   fi
 
+#    - stage: makeITK
+#      script: |
+#        unset CCACHE_DISABLE
+#        export CCACHE_DIR=$HOME/.ccache
+#        ./scripts/configure_ITK_External_linux.sh;
+#      os: linux
+#      sudo: required
+#      python: 3.6
+#    - stage: makeITK
+#      script: |
+#        brew update;
+#        brew install ccache;
+#        unset CCACHE_DISABLE;
+#        export CCACHE_DIR=$HOME/.ccache;
+#        ccache --show-stats;
+#        export PATH="/usr/local/opt/ccache/libexec:$PATH";
+#        ./scripts/configure_ITK_External_mac.sh;
+#      os: osx
+#      sudo: required
+#      language: generic
+
 jobs:
   include:
 
-    - stage: makeITK
-      script: |
-        unset CCACHE_DISABLE
-        export CCACHE_DIR=$HOME/.ccache
-        ./scripts/configure_ITK_External_linux.sh;
-      os: linux
-      sudo: required
-      python: 3.6
-    - stage: makeITK
-      script: |
-        brew update;
-        brew install ccache;
-        unset CCACHE_DISABLE;
-        export CCACHE_DIR=$HOME/.ccache;
-        ccache --show-stats;
-        export PATH="/usr/local/opt/ccache/libexec:$PATH";
-        ./scripts/configure_ITK_External_mac.sh;
-      os: osx
-      sudo: required
-      language: generic
+
 
     - stage: install
       script: |
