--- a/.travis.yml
+++ b/.travis.yml
@@ -54,7 +54,7 @@ jobs:
         export ITK_DIR=$TRAVIS_BUILD_DIR/itkbuild-linux
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
-        pip install .
+        pip install -v .
       os: linux
       python: 3.6
       sudo: required
@@ -63,7 +63,7 @@ jobs:
         export ITK_DIR=$HOME/itkbuild-mac
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
-        pip install .
+        pip install -v .
       os: osx
       sudo: required
       language: generic
