--- a/.travis.yml
+++ b/.travis.yml
@@ -47,14 +47,13 @@ before_install: |
 jobs:
   include:
 
-
-
     - stage: install
       script: |
         export ITK_DIR=$TRAVIS_BUILD_DIR/itkbuild-linux
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
+        ./tests/run_tests.sh
       os: linux
       python: 3.6
       sudo: required
@@ -64,21 +63,10 @@ jobs:
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
         python setup.py install
+        ./tests/run_tests.sh
       os: osx
       sudo: required
       language: generic
-
-    - stage: test
-      script:
-        - ./tests/run_tests.sh
-      os: osx
-      sudo: required
-      language: generic
-    - stage: test
-      script:
-        - ./tests/run_tests.sh
-      os: linux
-      python: 3.6
 
   allow_failures:
     - os: osx
