--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -37,7 +37,7 @@ add_subdirectory(pybind11)
 ## LOCAL ##
 pybind11_add_module(antsImage LOCAL_antsImage.cxx)
 pybind11_add_module(antsImageClone LOCAL_antsImageClone.cxx)
-#pybind11_add_module(antsImageHeaderInfo LOCAL_antsImageHeaderInfo.cxx)
+pybind11_add_module(antsImageHeaderInfo LOCAL_antsImageHeaderInfo.cxx)
 #pybind11_add_module(antsImageMutualInformation LOCAL_antsImageMutualInformation.cxx)
 #pybind11_add_module(antsImageToImageMetric LOCAL_antsImageToImageMetric.cxx)
 #pybind11_add_module(antsImageUtils LOCAL_antsImageUtils.cxx)
@@ -88,7 +88,7 @@ pybind11_add_module(readImage LOCAL_readImage.cxx)
 ## LOCAL ##
 target_link_libraries(antsImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(antsImageClone PRIVATE ${ITK_LIBRARIES})
-#target_link_libraries(antsImageHeaderInfo PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(antsImageHeaderInfo PRIVATE ${ITK_LIBRARIES})
 #target_link_libraries(antsImageMutualInformation PRIVATE ${ITK_LIBRARIES})
 #target_link_libraries(antsImageToImageMetric PRIVATE ${ITK_LIBRARIES})
 #target_link_libraries(antsImageUtils PRIVATE ${ITK_LIBRARIES})
