--- a/.travis.yml
+++ b/.travis.yml
@@ -62,14 +62,17 @@ jobs:
         export ITK_DIR=$HOME/itkbuild-mac
         travis_retry pip install --upgrade pip setuptools wheel
         travis_retry pip install -r requirements.txt --only-binary=scipy
+        travis_retry pip install coveralls coverage
         python setup.py install
-        ./tests/run_tests.sh
+        ./tests/run_tests.sh -c
+        cd tests
+        coveralls
       os: osx
       sudo: required
       language: generic
 
   allow_failures:
-    - os: osx
+    - os: linux
 
 
 branches:
