--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ jobs:
         unset CCACHE_DISABLE
         export CCACHE_DIR=$HOME/.ccache
         ./scripts/configure_VTK_External_linux.sh;
+        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-linux;
         ./scripts/configure_ITK_External_linux.sh;
       os: linux
       sudo: required
@@ -50,6 +51,7 @@ jobs:
         ccache --show-stats;
         export PATH="/usr/local/opt/ccache/libexec:$PATH";
         ./scripts/configure_VTK_External_mac.sh;
+        export VTK_DIR=$TRAVIS_BUILD_DIR/vtkbuild-mac;
         ./scripts/configure_ITK_External_mac.sh;
       os: osx
       sudo: required
