--- a/.travis.yml
+++ b/.travis.yml
@@ -88,7 +88,7 @@ jobs:
         travis_retry pip install -r requirements.txt --only-binary=scipy
         travis_retry pip install plotly webcolors scikit-image
         python setup.py install --vtk
-        ./tests/run_tests.sh
+        ./tests/run_tests_travis.sh
       os: linux
       python: 3.6
       sudo: required
@@ -100,9 +100,7 @@ jobs:
         travis_retry pip install -r requirements.txt --only-binary=scipy
         travis_retry pip install coveralls coverage plotly webcolors scikit-image
         python setup.py install --vtk
-        ./tests/run_tests.sh -c
-        cd tests
-        coveralls
+        ./tests/run_tests_travis.sh
       os: osx
       sudo: required
       language: generic
