--- a/.travis.yml
+++ b/.travis.yml
@@ -96,9 +96,7 @@ jobs:
         travis_retry pip install -r requirements.txt --only-binary=scipy
         travis_retry pip install coveralls plotly webcolors scikit-image fancyimpute 
         python setup.py install --vtk
-        ./tests/run_tests_travis.sh -c
-        cd tests
-        coveralls
+        ./tests/run_tests_travis.sh
       os: linux
       python: 3.6
       sudo: required
