--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -55,6 +55,7 @@ pybind11_add_module(getNeighborhoodMatrix LOCAL_getNeighborhoodMatrix.cxx)
 pybind11_add_module(invariantImageSimilarity LOCAL_invariantImageSimilarity.cxx)
 pybind11_add_module(labelStats LOCAL_labelStats.cxx)
 pybind11_add_module(mergeChannels LOCAL_mergeChannels.cxx)
+pybind11_add_module(padImage LOCAL_padImage.cxx)
 pybind11_add_module(readImage LOCAL_readImage.cxx)
 pybind11_add_module(readTransform LOCAL_readTransform.cxx)
 pybind11_add_module(reflectionMatrix LOCAL_reflectionMatrix.cxx)
@@ -114,6 +115,7 @@ target_link_libraries(getNeighborhoodMatrix PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(invariantImageSimilarity PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(labelStats PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(mergeChannels PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(padImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(readImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(readTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reflectionMatrix PRIVATE ${ITK_LIBRARIES})
