--- a/ants/lib/CMakeLists.txt
+++ b/ants/lib/CMakeLists.txt
@@ -61,6 +61,7 @@ pybind11_add_module(readTransform LOCAL_readTransform.cxx)
 pybind11_add_module(reflectionMatrix LOCAL_reflectionMatrix.cxx)
 pybind11_add_module(reorientImage LOCAL_reorientImage.cxx)
 pybind11_add_module(reorientImage2 LOCAL_reorientImage2.cxx)
+pybind11_add_module(rgbToVector LOCAL_rgbToVector.cxx)
 pybind11_add_module(sccaner LOCAL_sccaner.cxx)
 pybind11_add_module(sliceImage LOCAL_sliceImage.cxx)
 pybind11_add_module(SmoothImage LOCAL_SmoothImage.cxx)
@@ -123,6 +124,7 @@ target_link_libraries(readTransform PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reflectionMatrix PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reorientImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(reorientImage2 PRIVATE ${ITK_LIBRARIES})
+target_link_libraries(rgbToVector PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(sccaner PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(sliceImage PRIVATE ${ITK_LIBRARIES})
 target_link_libraries(SmoothImage PRIVATE ${ITK_LIBRARIES})
